Getting MDIDebug_XMLView configuration ready for another experimental XMLView varient

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,5 @@ SharedCode/TreeViewV2/
 SharedCode/HybridPlatform/
 
 SharedCode/MFCHybrid/
+SharedCode/MFCApp/TextViewV0.h
+SharedCode/MFCApp/TextViewV0.cpp
